--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -1,14 +1,17 @@
+/*
+    This file contain common stylesheet to all widgets.
+*/
+
+
 *{
     font-family: "Verdana";
     font-size: 11px;
-    outline: none; /* Removing rect border in selected tabs (Linux workaround) */
+    outline: none;                  /* Removing rect border in selected tabs (Linux workaround) */
 }
 
-/* Remove the focus rect. The annoying focus appears only in VSt plugin*/
-QPushButton:focus {
-    outline: none;
-}
 
+/* Stylesheet for buttons
+--------------------------------*/
 QPushButton
 {
     border: 1px outset gray;
@@ -17,43 +20,68 @@ QPushButton
     color: rgb(60, 60, 60);
 }
 
-QPushButton:checked{
+QPushButton:focus
+{
+    outline: none;                  /* Remove the focus rect from buttons. The annoying focus appears only in VSt plugin*/
+}
+
+QPushButton:checked
+{
     border-style: inset;
     color: rgb(0,0,0);
 }
 
-QPushButton[enabled="false"]{
+QPushButton[enabled="false"]        /* disabled buttons */
+{
     background: none;
     color: rgba(0, 0, 0, 30);
     border-color: rgba(0, 0, 0, 40);
 }
 
-QScrollBar:vertical{
+
+/* Stylesheet for Scroll bars
+--------------------------------*/
+QScrollBar:vertical
+{
     width: 12px;
 }
 
-QScrollBar:horizontal{
+QScrollBar:horizontal
+{
     height: 12px;
 }
 
+
+/* QLineEdit stylesheet. This widget is used in chat text input, user name, channel name, user name dialog, etc.
+--------------------------------*/
 QLineEdit,
-#userNamePanel{
+#userNamePanel
+{
     padding: 2px;
     color: black;
     border-radius: 1px;
     border: 1px solid;
 }
 
-QScrollArea{
-    border: none;
-    background: transparent;
-}
-
-QPlainTextEdit{
+/* QPlainTextEdit stylesheet. If I remember correctly this widget is used only in black listed vst plugins.
+-----------------------------------------------------------------------------------------------------------*/
+QPlainTextEdit
+{
     border: none;
 }
 
 
-QScrollArea > QWidget > QWidget{/*the content panel - QSCroll contém um QWidget privado que já é uma view port,além disso eu usei o meu próprio widget*/
-background: transparent;
+/* QScrollArea stylesheet.
+--------------------------*/
+QScrollArea
+{
+    border: none;
+    background: transparent;        /* we are interested only in the scroll feature */
 }
+
+
+QScrollArea > QWidget > QWidget
+{
+    background: transparent;        /*removing the background in content (public rooms) widget */
+}
+
