--- a/src/resources/css/themes/Flat/Chords.css
+++ b/src/resources/css/themes/Flat/Chords.css
@@ -1,8 +1,13 @@
-ChordLabel{
+/* ChordLabel is the widget used to show ONE chord
+-------------------------------------*/
+
+ChordLabel
+{
     background-color: rgba(0,0,0, 7);
     color: rgb(90, 90, 90);
 }
 
-ChordLabel[current="true"]{
+ChordLabel[current="true"]
+{
     background-color: rgba(255,255,255, 220);
 }
