--- a/src/resources/css/themes/Flat/LocalTrack.css
+++ b/src/resources/css/themes/Flat/LocalTrack.css
@@ -1,56 +1,93 @@
+/* Local track stylesheet for Flat theme */
 
-FxPanelItem{
+
+/* FxPanelItem is the 'slot' for one vst plugin
+--------------------------------------------------*/
+FxPanelItem
+{
     background-color: rgba(0, 0, 0, 55);
     background-position: center right;
     background-repeat: none;
     max-height: 14px;
-    width: 100%;
     border: none;
 }
 
-BaseTrackView[unlighted="false"] FxPanelItem{
+BaseTrackView[unlighted="false"] FxPanelItem            /* slot border when the track is not xmiting */
+{
     border: 1px outset rgb(100, 100, 100);
 }
 
-FxPanelItem[containPlugin="false"]{
+FxPanelItem[containPlugin="false"]                      /* empty slot */
+{
     background-image: url(':/images/arrow-down-lighter.png');
 }
-FxPanelItem[containPlugin="true"]{
+
+FxPanelItem[containPlugin="true"]                       /* non empty slot */
+{
     background-image: none;
 }
 
-FxPanelItem > QLabel{
+FxPanelItem  QLabel                                     /* plugin name label */
+{
     qproperty-alignment: AlignLeft;
     font-size: 10px;
     color: #D3D3D3;
     margin: 0px;
 }
 
-FxPanelItem:hover{
+FxPanelItem:hover                                       /* slot hover effect */
+{
     background-color: rgba(0, 0, 0, 60);
 }
 
-FxPanelItem > QPushButton{
+FxPanelItem QPushButton                                 /* the small button used to bypass the plugin */
+{
      max-width: 10px;
      max-height: 10px;
      margin: 0px;
      padding: 0px;
-     border: 1px solid rgb(0, 120, 0);
+     border: 1px solid rgba(0, 0, 0, 60);
      background-color: rgba(0, 0, 0, 120);
 }
 
-FxPanelItem > QPushButton:hover{
+FxPanelItem QPushButton:hover                           /* hover effect for the small 'plugin bypass' button */
+{
     border: 1px solid rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 60);
 }
 
-FxPanelItem > QPushButton:checked{
+FxPanelItem QPushButton:checked                         /* 'plugin bypass' button is checked */
+{
     background-color: rgb(0, 210, 0);
+    border-color: rgb(0, 100, 0);
 }
 
-FxPanelItem > QPushButton:checked:hover{
+FxPanelItem QPushButton:checked:hover                   /* hover effect for 'plugin bypass' button when checked */
+{
     background-color: rgb(0, 225, 0);
 }
+
+
+
+
+
+LocalTrackView[highlighted="true"]
+{
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(255, 255, 255),
+    stop:1 rgb(170, 170, 170));
+}
+
+LocalTrackView #inputPanel
+{
+    background-color: rgba(0, 0, 0, 60);
+}
+
+LocalTrackView #inputPanel:hover
+{
+    background-color: rgba(0, 0, 0, 30);
+}
+
 
 
 
@@ -87,19 +124,4 @@ FxPanelItem > QPushButton:checked:hover{
 {
     background-color: rgb(255, 40, 40);
     border-color: rgba(0, 0, 0, 90);
-
-}
-
-LocalTrackView[highlighted="true"]{
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(255, 255, 255),
-    stop:1 rgb(170, 170, 170));
-}
-
-LocalTrackView #inputPanel{
-    background-color: rgba(0, 0, 0, 60);
-}
-
-LocalTrackView #inputPanel:hover{
-    background-color: rgba(0, 0, 0, 30);
 }
