--- a/src/resources/css/themes/Flat/MainWindow.css
+++ b/src/resources/css/themes/Flat/MainWindow.css
@@ -16,19 +16,12 @@
     color: rgb(60, 60, 60);
 }
 
-
-QMainWindow{
-    background-color: rgb(200, 200, 200);
-    border: 1px solid rgb(90, 90, 90);
-}
-
-QMainWindow #bottomPanel{
-    background: rgb(224, 224, 224);
-    border-top: 1px solid rgb(191, 191, 191);
-}
-
-#leftPanel{
-   background-color: rgb(120, 120, 120);
+#masterMeterL,
+#masterMeterR
+{
+    max-height: 4px;
+    height: 4px;
+    margin: 0px;
 }
 
 #userNameLineEdit
@@ -43,6 +36,25 @@ QMainWindow #bottomPanel{
 }
 
 /* ------------------------------ */
+
+/* main areas */
+
+QMainWindow
+{
+    background-color: rgb(200, 200, 200);
+    border: 1px solid rgb(90, 90, 90);
+}
+
+#bottomPanel
+{
+    background: rgb(224, 224, 224);
+    border-top: 1px solid rgb(191, 191, 191);
+}
+
+#leftPanel
+{
+   background-color: rgb(120, 120, 120);
+}
 
 #contentTabWidget:pane
 {
@@ -62,17 +74,4 @@ QMainWindow #bottomPanel{
 {
     background-color: rgb(160, 160, 160);
     color: rgb(210, 210, 210);
-}
-
-
-
-/* TODO this piece can be removed? */
-.QMainWindow .QGroupBox::title {
-subcontrol-origin: margin;
-subcontrol-position: top center; /* position at the top center */
-padding: 10 3px;
-color: rgb(190, 190, 190);
-border-bottom-style: groove;
-border-bottom-color: darkgray;
-border-width: 3px;
 }
