--- a/src/resources/css/themes/Flat/PublicRooms.css
+++ b/src/resources/css/themes/Flat/PublicRooms.css
@@ -1,5 +1,4 @@
-
-
+/* JamRoomViewPanel is the widget used to show ONE public room/server */
 
 JamRoomViewPanel
 {
@@ -9,7 +8,7 @@ JamRoomViewPanel
     border-left: none;
 }
 
-JamRoomViewPanel #content
+JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
     background: rgb(253, 253, 253);
 }
