--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -1,4 +1,7 @@
-QPushButton{
+/* buttons */
+
+QPushButton
+{
     border-radius: 2px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 white,
@@ -13,112 +16,143 @@ QPushButton:disabled
     color: rgba(0, 0, 0, 60)
 }
 
-
-QPushButton:checked{
+QPushButton:checked
+{
     background-color: rgba(0, 0, 0, 70);
 }
 
-QPushButton:hover{
-background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(240, 240, 240),
-    stop:0.2 rgb(255, 255, 255),
-    stop:0.7 rgb(240, 240, 240),
-    stop:1 rgb(210,210, 210)
+QPushButton:hover
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 rgb(240, 240, 240),
+        stop:0.2 rgb(255, 255, 255),
+        stop:0.7 rgb(240, 240, 240),
+        stop:1 rgb(210,210, 210)
     );
+
     color: black;
 }
 
 
+
+
+/* ScrollBars */
+
 QScrollBar:vertical,
-QScrollBar:horizontal {
+QScrollBar:horizontal
+{
     border: 1px solid rgba(0, 0, 0, 45);
     background-color: rgba(0, 0, 0, 40);
     margin: 0px;
     border-radius: 2px;
 }
 
-
 QScrollBar::handle:vertical,
-QScrollBar::handle:horizontal {
-  border: 1px solid rgba(0, 0, 0, 85);
-  border-radius: 2px;
-  margin: 0px;
+QScrollBar::handle:horizontal
+{
+    border: 1px solid rgba(0, 0, 0, 85);
+    border-radius: 2px;
+    margin: 0px;
 }
 
-QScrollBar::handle:vertical {
+QScrollBar::handle:vertical
+{
     background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0,
-    stop:0 rgba(120, 126, 118, 64),
-    stop:0.47 rgba(91, 91, 91, 64),
-    stop:0.49 rgba(81, 75, 77, 64),
-    stop:0.92 rgba(142, 140, 140, 64));
+        stop:0 rgba(120, 126, 118, 64),
+        stop:0.47 rgba(91, 91, 91, 64),
+        stop:0.49 rgba(81, 75, 77, 64),
+        stop:0.92 rgba(142, 140, 140, 64));
 
     max-height: 20px;
     height: 20px;
 }
 
-QScrollBar::handle:vertical:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(140, 146, 138, 255), stop:0.47 rgba(121, 121, 121, 255), stop:0.49 rgba(111, 95, 97, 255), stop:0.92 rgba(172, 170, 170, 255));
+QScrollBar::handle:vertical:hover
+{
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0,
+        stop:0 rgba(140, 146, 138, 255),
+        stop:0.47 rgba(121, 121, 121, 255),
+        stop:0.49 rgba(111, 95, 97, 255),
+        stop:0.92 rgba(172, 170, 170, 255)
+    );
 }
 
-QScrollBar::handle:horizontal {
-  background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
-    stop:0.92 rgba(120, 126, 118, 64),
-    stop:0.49 rgba(91, 91, 91, 64),
-    stop:0.47 rgba(81, 75, 77, 64),
-    stop:0 rgba(142, 140, 140, 64));
-  max-width: 20px;
-  width: 20px;
+QScrollBar::handle:horizontal
+{
+    background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
+        stop:0.92 rgba(120, 126, 118, 64),
+        stop:0.49 rgba(91, 91, 91, 64),
+        stop:0.47 rgba(81, 75, 77, 64),
+        stop:0 rgba(142, 140, 140, 64));
+
+    max-width: 20px;
+    width: 20px;
 }
 
-QScrollBar::handle:horizontal:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
-  stop:0.92 rgba(140, 146, 138, 255), stop:0.49 rgba(121, 121, 121, 255), stop:0.47 rgba(101, 95, 97, 255), stop:0 rgba(162, 160, 160, 255));
+QScrollBar::handle:horizontal:hover
+{
+    background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
+        stop:0.92 rgba(140, 146, 138, 255),
+        stop:0.49 rgba(121, 121, 121, 255),
+        stop:0.47 rgba(101, 95, 97, 255),
+        stop:0 rgba(162, 160, 160, 255));
 }
 
-
-QScrollBar::add-line:vertical {
-  border: none;/*2px solid red;*/
-  height: 0px;
-  subcontrol-position: bottom;
-  subcontrol-origin: margin;
-}
-QScrollBar::add-line:horizontal {
-  border: none;/*2px solid red;*/
-  width: 0px;
-  subcontrol-position: left;
-  subcontrol-origin: margin;
+QScrollBar::add-line:vertical
+{
+    border: none;
+    height: 0px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
 }
 
-QScrollBar::sub-line:vertical {
-  border: none;
-  height: 0px;
-  subcontrol-position: top;
-  subcontrol-origin: margin;
+QScrollBar::add-line:horizontal
+{
+    border: none;
+    width: 0px;
+    subcontrol-position: left;
+    subcontrol-origin: margin;
 }
-QScrollBar::sub-line:horizontal {
-  border: none;
-  width: 0px;
-  subcontrol-position: right;
-  subcontrol-origin: margin;
+
+QScrollBar::sub-line:vertical
+{
+    border: none;
+    height: 0px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:horizontal
+{
+    border: none;
+    width: 0px;
+    subcontrol-position: right;
+    subcontrol-origin: margin;
 }
 
 QScrollBar::add-page:vertical,
 QScrollBar::sub-page:vertical,
 QScrollBar::add-page:horizontal,
-QScrollBar::sub-page:horizontal {
-  background: none;
+QScrollBar::sub-page:horizontal
+{
+    background: none;
 }
 
 
+
+
+
+/* ---------------------------- */
 QLineEdit,
-#userNamePanel{
+#userNamePanel
+{
     border-radius: 3px;
     background-color: #C5C5C5;
     border-color: #B2B2B2;
 }
 
-
-QLineEdit[enabled="false"]{
+QLineEdit[enabled="false"]
+{
     border-radius: 2px;
     padding: 2px;
     background: rgb(0, 0, 0, 40);
@@ -127,29 +161,35 @@ QLineEdit[enabled="false"]{
 }
 
 
-/*  SLIDER ++++++++++++++++++++++++++++++++ */
+
+
+
+/*  SLIDERs ++++++++++++++++++++++++++++++++ */
 
 QSlider::add-page:vertical,
-QSlider::groove:vertical {
+QSlider::groove:vertical
+{
     border: 1px solid rgba(0, 0, 0, 55);
     border-radius: 2px;
 }
 
-QSlider::groove:horizontal{
+QSlider::groove:horizontal
+{
     background-color: rgba(0, 0, 0, 30);
     height: 3px;
     border-radius: 2px;
     border: 1px inset rgb(140, 140, 140);
 }
 
-QSlider::groove:vertical{
+QSlider::groove:vertical
+{
     border:         1px solid rgba(0, 0, 0, 40);
     border-right:   1px solid rgb(255, 255, 255, 140);
     border-bottom:  1px solid rgba(255, 255, 255, 140);
 }
 
-
-QSlider::groove:vertical {
+QSlider::groove:vertical
+{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
             stop: 0     rgb(201, 201, 201),
             stop: 1.0   rgb(115, 115, 115)
@@ -157,7 +197,8 @@ QSlider::groove:vertical {
     width: 5px;
 }
 
-QSlider::handle:horizontal {
+QSlider::handle:horizontal
+{
     background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
         stop: 0      rgb(230, 230, 230),
         stop: 0.8    rgb(120, 120, 120),
@@ -167,22 +208,20 @@ QSlider::handle:horizontal {
     margin-bottom: -5px;
     padding: 0px;
     width: 11px;
-    /*height: 20x;*/
     border-radius: 5px;
     border: 1px outset rgb(80, 80, 80);
 }
 
-/*------------------------------ */
-
-QSlider::handle:horizontal:hover {
+QSlider::handle:horizontal:hover
+{
     background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
         stop: 0      rgb(240, 240, 240),
         stop: 0.8    rgb(150, 150, 150),
         stop: 1      rgba(0, 0, 0, 20));
-
 }
 
-QSlider::handle:vertical{
+QSlider::handle:vertical
+{
     background: qlineargradient(x1:0, y1:0.3, x2:0.7, y2:1,
         stop: 0      rgb(230, 230, 230),
         stop: 0.9    rgb(170, 170, 170),
@@ -196,26 +235,31 @@ QSlider::handle:vertical{
     border: 1px outset rgb(90, 90, 90);
 }
 
-QSlider::handle:vertical:hover{
-background: qlineargradient(x1:0, y1:0.3, x2:0.7, y2:1,
-    stop: 0      rgb(240, 240, 240),
-    stop: 0.9    rgb(200, 200, 200),
-    stop: 1      rgba(0, 0, 0, 20));
+QSlider::handle:vertical:hover
+{
+    background: qlineargradient(x1:0, y1:0.3, x2:0.7, y2:1,
+        stop: 0      rgb(240, 240, 240),
+        stop: 0.9    rgb(200, 200, 200),
+        stop: 1      rgba(0, 0, 0, 20)
+    );
 }
 
 
 
+/* tabs */
 
- .QTabWidget::tab-bar {
-    left: 10px; /* move to the right by 5px */
+QTabWidget::tab-bar
+{
+    left: 10px; /* move to the right by 10px */
     padding: 3px;
- }
+}
 
-QTabBar::tab {
+QTabBar::tab
+{
     background-color: rgb(180, 180, 180);
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
- }
+}
 
 QTabBar::tab:selected,
 QTabBar::tab:hover
@@ -233,12 +277,4 @@ QTabBar::tab:selected
 QTabBar::tab:!selected {
     margin-top: 3px; /* make non-selected tabs look smaller */
     color: rgb(90, 90, 90);
-}
-
-PeakMeter{
-    background-color: rgba(0, 0, 0, 10);
-    border: 1px inset rgba(0, 0, 0, 15);
-    border-radius: 1px;
-    min-width: 2px;
-    min-height: 2px;
 }
