--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -1,126 +1,19 @@
+/* some details of ninjam tracks */
 
-
-NinjamTrackView[horizontal="true"] #buttonBoostMinus12,
-NinjamTrackView[horizontal="true"] #buttonBoostPlus12,
-NinjamTrackView[horizontal="true"] #buttonBoostZero {
-    padding: 1px;
-    border: 1px solid rgba(0, 0, 0, 30);
-}
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12{
-   border-radius: 0px;
-   border-bottom-right-radius: 3px;
-   border-top-right-radius: 3px;
-   border-left: 1px solid rgba(0, 0, 0, 10);
-   margin: 0px;
-}
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12{
-    border-radius: 0px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-right: 1px solid rgba(0, 0, 0, 10);
-    margin: 0px;
-}
-
-NinjamTrackView[horizontal="true"] #buttonBoostZero{
-    min-width: 12px;
-}
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12:checked,
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:checked,
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:checked {
-    margin-top: -1px;
-    background-color: rgba(0, 0, 0, 30);
-}
-
-NinjamTrackView[horizontal="true"]{
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(200, 200, 200),
-        stop:0.01 rgb(240, 240, 240),
-        stop:1 rgb(170, 170, 170)
-    );
-}
-
-NinjamRoomWindow QToolButton{
-    border: 1px solid rgba(0, 0, 0, 20);
-    background-color: rgba(0, 0, 0, 8);
-    min-height: 20px;
-    min-width: 24px;
-    padding: 0px;
-}
-
-NinjamRoomWindow QToolButton:hover{
-    border: 1px solid rgba(0, 0, 0, 50);
-    background-color: rgba(255, 255, 255, 50);
-}
-
-NinjamRoomWindow QToolButton:checked{
-    background-color: rgba(0, 0, 0, 30);
-    border: 1px solid rgba(0, 0, 0, 40);
-}
-
-NinjamRoomWindow QToolButton#buttonVerticalLayout{
-    border-radius: 0px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-}
-
-NinjamRoomWindow QToolButton#buttonHorizontalLayout{
-    border-radius: 0px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-}
-
-NinjamRoomWindow QToolButton#wide{
-    border-radius: 0px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-}
-
-NinjamRoomWindow QToolButton#narrow{
-    border-radius: 0px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-}
-
-
-
-NinjamRoomWindow TrackGroupView BaseTrackView QSlider::groove:vertical{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-            stop: 0     rgba(0, 0, 0, 50),
-            stop: 1.0   rgba(0, 0, 0, 30)
-            );
-}
-
-
-NinjamTrackView QProgressBar{ /* chunks display */
+NinjamTrackView QProgressBar
+{
     border-radius: 2px;
 }
 
-
-NinjamTrackGroupView[horizontal="true"] #topPanel{
+NinjamTrackGroupView[horizontal="true"] #topPanel
+{
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
 }
 
-
-NinjamRoomWindow #licenceButton
+NinjamTrackView #channelName                /* ninjam channel name */
 {
-    min-width: 28px;
-    background-color: rgba(0, 0, 0, 8);
-    border: 1px solid rgba(0, 0,0, 12);
-    border-radius: 2px;
-}
-
-NinjamRoomWindow #licenceButton:hover{
-    background-color: rgba(0, 0, 0, 30);
-    border: 1px solid rgba(0, 0, 0, 40);
-
-}
-
-NinjamTrackView > #channelName{
-    border: none; /* 1px solid rgba(0, 0, 0, 7);*/
+    border: none;
     background-color: rgba(0, 0, 0, 6);
     border-radius: 2px;
     padding-top: 3px;
@@ -130,19 +23,13 @@ NinjamTrackView > #channelName{
     max-width: 130px;
 }
 
-
-
-NinjamRoomWindow #content{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.01, stop:0 rgba(0, 0, 0, 25), stop:1 rgba(0, 0, 0, 0));
-    border-top: 1px solid rgba(0, 0, 0, 10);
-}
-
-
-NinjamRoomWindow #groupNameField {
+NinjamTrackGroupView #groupNameField        /* ninjamers name */
+{
     border-radius: 2px;
 }
 
-NinjamRoomWindow TrackGroupView{
+NinjamTrackGroupView                        /* track group in ninjam window */
+{
     border: 1px solid rgba(0, 0, 0, 80);
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0      rgba(0, 0, 0, 0),
@@ -154,8 +41,150 @@ NinjamRoomWindow TrackGroupView{
     border-top-right-radius: 2px;
 }
 
+
+/* buttons in ninjam track when using horizontal layout
+-------------------------------------------------------------*/
+
+NinjamTrackView[horizontal="true"] #buttonBoostMinus12,
+NinjamTrackView[horizontal="true"] #buttonBoostPlus12,
+NinjamTrackView[horizontal="true"] #buttonBoostZero
+{
+    padding: 1px;
+    border: 1px solid rgba(0, 0, 0, 30);
+}
+
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12
+{
+   border-radius: 0px;
+   border-bottom-right-radius: 3px;
+   border-top-right-radius: 3px;
+   border-left: 1px solid rgba(0, 0, 0, 10);
+   margin: 0px;
+}
+
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12
+{
+    border-radius: 0px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-right: 1px solid rgba(0, 0, 0, 10);
+    margin: 0px;
+}
+
+NinjamTrackView[horizontal="true"] #buttonBoostZero
+{
+    min-width: 12px;
+}
+
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12:checked,
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:checked,
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:checked
+{
+    margin-top: -1px;
+    background-color: rgba(0, 0, 0, 30);
+}
+
+NinjamTrackView[horizontal="true"]
+{
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 rgb(200, 200, 200),
+        stop:0.01 rgb(240, 240, 240),
+        stop:1 rgb(170, 170, 170)
+    );
+}
+
+
+/* Ninjam window tool buttons (horizontal/vertical layout, narrow/wide tracks) */
+
+NinjamRoomWindow QToolButton
+{
+    border: 1px solid rgba(0, 0, 0, 20);
+    background-color: rgba(0, 0, 0, 8);
+    min-height: 20px;
+    min-width: 24px;
+    padding: 0px;
+}
+
+NinjamRoomWindow QToolButton:hover
+{
+    border: 1px solid rgba(0, 0, 0, 50);
+    background-color: rgba(255, 255, 255, 50);
+}
+
+NinjamRoomWindow QToolButton:checked
+{
+    background-color: rgba(0, 0, 0, 30);
+    border: 1px solid rgba(0, 0, 0, 40);
+}
+
+NinjamRoomWindow QToolButton#buttonVerticalLayout
+{
+    border-radius: 0px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+NinjamRoomWindow QToolButton#buttonHorizontalLayout
+{
+    border-radius: 0px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+NinjamRoomWindow QToolButton#wide
+{
+    border-radius: 0px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+NinjamRoomWindow QToolButton#narrow
+{
+    border-radius: 0px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+
+NinjamRoomWindow #licenceButton
+{
+    min-width: 28px;
+    background-color: rgba(0, 0, 0, 8);
+    border: 1px solid rgba(0, 0,0, 12);
+    border-radius: 2px;
+}
+
+NinjamRoomWindow #licenceButton:hover
+{
+    background-color: rgba(0, 0, 0, 30);
+    border: 1px solid rgba(0, 0, 0, 40);
+}
+
+
+
+/* slider in ninjam tracks (not the track group) */
+NinjamRoomWindow TrackGroupView BaseTrackView QSlider::groove:vertical
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+            stop: 0     rgba(0, 0, 0, 50),
+            stop: 1.0   rgba(0, 0, 0, 30)
+            );
+}
+
+
+
+NinjamRoomWindow #content           /* the widget used to show ninjam tracks */
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.01, stop:0 rgba(0, 0, 0, 25), stop:1 rgba(0, 0, 0, 0));
+    border-top: 1px solid rgba(0, 0, 0, 10);
+}
+
+
+
+
 /** The floating window showing the metronome/interval progress */
-IntervalProgressWindow{
+IntervalProgressWindow
+{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop: 0.8     rgb(210, 210, 210),
     stop: 1.0   rgba(160, 160, 160));
@@ -164,7 +193,8 @@ IntervalProgressWindow{
 
 
 
-NinjamPanel #ninjamControlsPanel{
+NinjamPanel #ninjamControlsPanel
+{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop: 0     rgba(0, 0, 0, 10),
     stop: 1.0   rgba(0, 0, 0, 30));
@@ -173,20 +203,14 @@ NinjamPanel #ninjamControlsPanel{
     border: 1px inset rgb(120, 120, 120);
 }
 
-NinjamPanel #soloButton,
-NinjamPanel #muteButton{
+NinjamPanel #soloButton,            /* metronome solo and mute */
+NinjamPanel #muteButton
+{
     border: 1px solid rgba(0, 0, 0, 60);
 }
 
 
-
-NinjamPanel QComboBox{
+NinjamPanel QComboBox               /* bpi, bpm, accents and shape comboboxes */
+{
     background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 30), stop:1 rgba(0, 0, 0, 50));
 }
-
-
-
-NinjamPanel QSlider::groove:vertical{
-    border-radius: 2px;
-}
-
