--- a/src/resources/css/themes/Rounded/PublicRooms.css
+++ b/src/resources/css/themes/Rounded/PublicRooms.css
@@ -1,12 +1,13 @@
 
-
-JamRoomViewPanel{
+JamRoomViewPanel
+{
     background-color: none;
     border: 1px solid rgba(0, 0, 0, 60);
     border-radius: 3px;
 }
 
-JamRoomViewPanel #panelTop{
+JamRoomViewPanel #panelTop
+{
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 #EAEAEA,
         stop:1 #CACACA);
@@ -14,7 +15,8 @@ JamRoomViewPanel #panelTop{
     border-top-right-radius: 3px;
 }
 
-JamRoomViewPanel #content{
+JamRoomViewPanel #content
+{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(255, 255, 255),
             stop:1 rgb(250, 250, 250));
