--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -21,6 +21,17 @@
         <file alias="Chat.css">css/themes/Flat/Chat.css</file>
         <file alias="Chords.css">css/themes/Flat/Chords.css</file>
     </qresource>
+    <qresource prefix="/style/themes/Black">
+        <file alias="BaseTrack.css">css/themes/Black/BaseTrack.css</file>
+        <file alias="NinjamWindow.css">css/themes/Black/NinjamWindow.css</file>
+        <file alias="LocalTrack.css">css/themes/Black/LocalTrack.css</file>
+        <file alias="Dialogs.css">css/themes/Black/Dialogs.css</file>
+        <file alias="General.css">css/themes/Black/General.css</file>
+        <file alias="MainWindow.css">css/themes/Black/MainWindow.css</file>
+        <file alias="PublicRooms.css">css/themes/Black/PublicRooms.css</file>
+        <file alias="Chat.css">css/themes/Black/Chat.css</file>
+        <file alias="Chords.css">css/themes/Black/Chords.css</file>
+    </qresource>
     <qresource prefix="/style/themes/Rounded">
         <file alias="BaseTrack.css">css/themes/Rounded/BaseTrack.css</file>
         <file alias="Chat.css">css/themes/Rounded/Chat.css</file>
