--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -1,4 +1,4 @@
-/* Local track stylesheet for Flat theme */
+/* Local track stylesheet for Black theme */
 
 
 /* FxPanelItem is the 'slot' for one vst plugin
