--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -1,4 +1,4 @@
-/* General stylesheet for Flat theme
+/* General stylesheet for Black theme
 -------------------------------------*/
 
 /* Button ----------------------*/
@@ -122,8 +122,8 @@ QLineEdit:focus,
 QLineEdit#groupNameField:focus
 {
     border-color: rgba(0, 0, 0, 90);
-    background-color: white;
-    color: black;
+    background-color: Black;
+    color: white;
 }
 
 
@@ -191,11 +191,13 @@ QTabBar::tab
 QTabBar::tab:selected,
 QTabBar::tab:hover
 {
-    background-color: rgb(180, 180, 180)
+    color: white;
+    background-color: rgb(20, 20, 20)
 }
 
 QTabBar::tab:!selected
 {
+    color: white;
     margin-top: 3px; /* make non-selected tabs look smaller */
-    color: rgb(90, 90, 90);
+    color: rgb(20, 20, 20);
 }
