--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -122,7 +122,7 @@ QLineEdit:focus,
 QLineEdit#groupNameField:focus
 {
     border-color: rgba(0, 0, 0, 90);
-    background-color: Black;
+    background-color: rgb(20, 20, 20);
     color: white;
 }
 
