--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -110,6 +110,7 @@ NinjamTrackView  #channelName               /* channel name for ninjamers */
 ----------------------------------------------------------------------------------------------------------------*/
 NinjamPanel #ninjamControlsPanel
 {
+    color: white;
     background-color: rgba(0, 0, 0, 20);
     border: 1px solid rgb(190, 190, 190);
 }
