--- a/src/resources/css/themes/Black/Chat.css
+++ b/src/resources/css/themes/Black/Chat.css
@@ -15,6 +15,7 @@ ChatPanel #chatText
 
 ChatPanel #chatText:focus                   /* text input field focused */
 {
+    color: black;
     border-color: rgba(0, 0, 0, 160);
     background-color: white;
 }
