--- a/src/resources/css/themes/Black/PublicRooms.css
+++ b/src/resources/css/themes/Black/PublicRooms.css
@@ -2,7 +2,7 @@
 
 JamRoomViewPanel
 {
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     border: 1px solid white;
     border-top: 1px solid white;
     border-left: 1px solid white;
@@ -11,7 +11,7 @@ JamRoomViewPanel
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
-    background: rgb(20, 20, 20);
+    background: black;
 }
 
 JamRoomViewPanel #labelName             /* the server name (ninbot.com, ninjamer.com, etc) */
