--- a/src/resources/css/themes/Black/Chat.css
+++ b/src/resources/css/themes/Black/Chat.css
@@ -10,14 +10,14 @@ scroll area, the text input field, but clear and auto translate buttons).
 ChatPanel #chatText
 {                                           /* text input field used to send chat messages */
     border-color: rgba(0, 0, 0, 80);
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(140, 140, 140);
 }
 
 ChatPanel #chatText:focus                   /* text input field focused */
 {
-    color: black;
+    color: rgb(20, 20, 20);
     border-color: rgba(0, 0, 0, 160);
-    background-color: white;
+    background-color: rgb(140, 140, 140);
 }
 
 
@@ -26,7 +26,7 @@ ChatPanel #chatText:focus                   /* text input field focused */
 ----------------------------------------------------------------*/
 ChatMessagePanel
 {
-    border: 1px solid rgb(140, 140, 140);
+    border: 1px solid black;
 }
 
 ChatMessagePanel #labelUserName             /* The name of chat message author */
