--- a/src/resources/css/themes/Black/PublicRooms.css
+++ b/src/resources/css/themes/Black/PublicRooms.css
@@ -2,29 +2,25 @@
 
 JamRoomViewPanel
 {
-    background-color: rgb(20, 20, 20);
-    border: 1px solid white;
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-bottom: 1px solid white;
+    background-color: rgb(22, 22, 22);
+    border: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
-    background: black;
+    background: rgb(20, 20, 20);
 }
 
 JamRoomViewPanel #labelName             /* the server name (ninbot.com, ninjamer.com, etc) */
 {
-    color: white;
+    color: rgb(140, 140,140);
     font-weight: bold;
 }
 
 JamRoomViewPanel .PlayerLabel
 {
-    color: white;
+    color: rgb(140, 140, 140);
 }
-
-
-
-
